@@ -58,7 +58,7 @@ $txt['tea_ts_password'] = 'Query Password';
 $txt['tea_ts_nf'] = 'Name Format (use #at# #ct# for alliance/corp tags and #name# for char name)';
 $txt['tea_ts_addrule_group'] = 'SMF Group';
 $txt['tea_ts_addrule_tsg'] = 'TS Group';
-$txt['tea_ts_addrule_nf'] = 'Name Format (use #at# #ct# for alliance/corp tags and #name# for char name)<br>Leave Blank for Default';
+$txt['tea_ts_addrule_nf'] = 'Name Format (use #at# #ct# for alliance/corp tags and #name# for char name)<br>Leave Blank for Default, #at# #ct# are for EVE only';
 $txt['tea_ts_db_need'] = 'TS Database Details, Only Required for UniqueID Method';
 $txt['tea_ts_db_host'] = 'TS Database host eg localhost';
 $txt['tea_ts_db_user'] = 'TS Database username';
